--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -1,7 +1,7 @@
 .body-container {
   .restaurant-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     flex-wrap: wrap;
   }
   .search {
