--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -1,8 +1,9 @@
 .body-container {
   .restaurant-list {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     flex-wrap: wrap;
+    padding: 32px;
   }
   .search {
     display: flex;
