--- a/src/components/Loading/Loading.scss
+++ b/src/components/Loading/Loading.scss
@@ -3,21 +3,20 @@ body {
 }
 .shimmer-container {
   display: flex;
-  justify-content: left;
+  justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
-  padding: 0px 40px;
+  padding: 0px 0px;
 }
 .card_shimmer {
-  position: relative;
-  -webkit-box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  border-radius: 6px;
   height: 300px;
-  overflow: hidden;
   width: 250px;
-  margin: 30px;
+  background-color: #fff;
+  border-radius: 0px;
+  margin: 20px 12px;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 6px 8px #0000001a;
 
   .shimmerBG {
     animation-duration: 2.2s;
@@ -49,7 +48,7 @@ body {
   }
 
   .media {
-    height: 200px;
+    height: 150px;
   }
 
   .p-32 {
